--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,8 @@ spring:
     user:
       name: demo
       password: demo
-  datasource:
-    url: jdbc:h2:file:./demodb
-    username: sa
-    password: sa
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+  profiles:
+    active: h2
 
 
 # disable Whitelabel Error Page
