--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,19 @@
     </dependency>
 <!-- h2 database ends-->
 
+<!-- spring-boot-starter-jpa includes dependencies like hibernate-entitymanager -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
