--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,13 @@
       <scope>provided</scope>
     </dependency>
 
+<!--    JSR 380 is a specification of the Java API for bean validation -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
